--- a/extension.css
+++ b/extension.css
@@ -1,6 +1,6 @@
 html, body {
   height: 100%;
-  background: url(background.jpg) center center/cover no-repeat fixed;
+  background: url(assets/background.jpg) center center/cover no-repeat fixed;
   margin: 0;
   overflow: hidden;
 }
