Add logo in bottom

--- a/extension.css
+++ b/extension.css
@@ -12,4 +12,11 @@ html, body {
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: default;
+}
+
+.logo-container {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
 }
